--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Theingi Lin</title>
 </head>
 <body>
-    Welcoem to my page
+    <a href="about.html" title="Go to about page">  About </a>
+    <br>
+    <a href="https://www.myanmaritc.com">MyanmarITC</a>
+    <br>
+    <a href="htttp://www.youtube.com">Youtube</a>
+    <br>
+    <a href="https://www.google.com"> <img src="2.png" alt=""></a>
+    Welcoem to <em>Zero to Pro</em> CS Boot camp <strong>Level-4 Batch-11</strong> 
+    <br>
+    <img src="1.png" alt="This is a logo" srcset="">
 </body>
 </html> 
