--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Theingi Lin</title>
 </head>
 <body>
+    <a href="a1/a1.html"> Assignment 1 </a>
     <a href="about.html" title="Go to about page">  About </a>
     <br>
     <a href="https://www.myanmaritc.com">MyanmarITC</a>
@@ -16,6 +17,6 @@
     <a href="https://www.google.com"> <img src="2.png" alt=""></a>
     Welcoem to <em>Zero to Pro</em> CS Boot camp <strong>Level-4 Batch-11</strong> 
     <br>
-    <img src="1.png" alt="This is a logo" srcset="">
+    <img src="images/1.png" alt="This is a logo" srcset="">
 </body>
 </html> 
